style: formatted with linters

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,25 +79,25 @@
     "# Set this variable to determine the location of the dataset download: KAGGLEHUB_CACHE\n",
     "\n",
     "# Download latest version of the main dataset.\n",
-    "path = kagglehub.dataset_download(\"kalacheva/london-bike-share-usage-dataset\")\n",
+    "path = kagglehub.dataset_download('kalacheva/london-bike-share-usage-dataset')\n",
     "\n",
-    "print(\"Path to dataset files:\", path)\n",
+    "print('Path to dataset files:', path)\n",
     "\n",
     "df = pd.read_csv(\n",
-    "    \"./datasets/kalacheva/london-bike-share-usage-dataset/versions/1/LondonBikeJourneyAug2023.csv\"\n",
+    "    './datasets/kalacheva/london-bike-share-usage-dataset/versions/1/LondonBikeJourneyAug2023.csv'\n",
     ")\n",
     "\n",
     "# Verify the data read was successful.\n",
     "print(df)\n",
-    "print(len(df[\"Start station\"].unique()))\n",
+    "print(len(df['Start station'].unique()))\n",
     "\n",
     "# Create a new df which contains a list of all unique trips (origin-destination pairs) and the quantity counts for each.\n",
     "df_unique_od = (\n",
-    "    df.groupby([\"Start station\", \"End station\"])\n",
+    "    df.groupby(['Start station', 'End station'])\n",
     "    .size()\n",
     "    .reset_index()\n",
-    "    .rename(columns={0: \"count\"})\n",
-    ")\n"
+    "    .rename(columns={0: 'count'})\n",
+    ")"
    ]
   },
   {
@@ -155,20 +155,19 @@
     }
    ],
    "source": [
-    "\n",
     "# Take a precursory glance at all trips which only appear once, twice, etc up to 10, assuming a quick drop-off.\n",
     "# The results are noted in commas following for quick reference, do not assume these are unchanged.\n",
     "print(df_unique_od)\n",
-    "print('1 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(1))  # 76943\n",
-    "print('2 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(2))  # 36612\n",
-    "print('3 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(3))  # 20516\n",
-    "print('4 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(4))  # 13231\n",
-    "print('5 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(5))  # 9195\n",
-    "print('6 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(6))  # 6403\n",
-    "print('7 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(7))  # 4907\n",
-    "print('8 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(8))  # 3871\n",
-    "print('9 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(9))  # 2988\n",
-    "print('10 trip occurrences: ', df_unique_od[\"count\"].value_counts().get(10))  # 2439\n",
+    "print('1 trip occurrences: ', df_unique_od['count'].value_counts().get(1))  # 76943\n",
+    "print('2 trip occurrences: ', df_unique_od['count'].value_counts().get(2))  # 36612\n",
+    "print('3 trip occurrences: ', df_unique_od['count'].value_counts().get(3))  # 20516\n",
+    "print('4 trip occurrences: ', df_unique_od['count'].value_counts().get(4))  # 13231\n",
+    "print('5 trip occurrences: ', df_unique_od['count'].value_counts().get(5))  # 9195\n",
+    "print('6 trip occurrences: ', df_unique_od['count'].value_counts().get(6))  # 6403\n",
+    "print('7 trip occurrences: ', df_unique_od['count'].value_counts().get(7))  # 4907\n",
+    "print('8 trip occurrences: ', df_unique_od['count'].value_counts().get(8))  # 3871\n",
+    "print('9 trip occurrences: ', df_unique_od['count'].value_counts().get(9))  # 2988\n",
+    "print('10 trip occurrences: ', df_unique_od['count'].value_counts().get(10))  # 2439\n",
     "# Total <= 10 trips: 177105\n",
     "# Total > 10 trips: 191630 - 177105 = 14525\n",
     "\n",
@@ -176,7 +175,7 @@
     "# Number,Start date,Start station number,Start station,End date,End station number,End station,Bike number,Bike model,Total duration,Total duration (ms)\n",
     "\n",
     "# Take the largest number of repeat trips for reference (York Way, KX).\n",
-    "print('Max repeat values: ', df_unique_od.max())\n"
+    "print('Max repeat values: ', df_unique_od.max())"
    ]
   },
   {
@@ -333,7 +332,6 @@
     }
    ],
    "source": [
-    "\n",
     "kx = 'York Way, Kings Cross'\n",
     "\n",
     "# Find a subset of data matching YW, Kings Cross as a start station. This will for the basis of later queries examining the validity of this subset.\n",
@@ -342,12 +340,20 @@
     "\n",
     "# We assume that trips under 60 seconds are potential \"false starts\". Select how many fall into this category.\n",
     "print('All from KX under 1 minute: ')\n",
-    "print(df.loc[df['Start station'] == kx]['Total duration (ms)'].apply(lambda x: x < 60000).sum())\n",
+    "print(\n",
+    "    df.loc[df['Start station'] == kx]['Total duration (ms)']\n",
+    "    .apply(lambda x: x < 60000)\n",
+    "    .sum()\n",
+    ")\n",
     "\n",
     "# Given very few are potential \"false starts\", we must assume these are circular trips.\n",
     "# How many unique OD trips are circular?\n",
     "print('Unique Start station and End station are the same: ')\n",
-    "print(df_unique_od.loc[df_unique_od['Start station'] == df_unique_od['End station']].reset_index())\n",
+    "print(\n",
+    "    df_unique_od.loc[\n",
+    "        df_unique_od['Start station'] == df_unique_od['End station']\n",
+    "    ].reset_index()\n",
+    ")\n",
     "\n",
     "# How many trips are circular in the entire dataset?\n",
     "print('Full DF Start station and End station are the same: ')\n",
@@ -355,8 +361,11 @@
     "\n",
     "# Of this, how many are potential \"false starts\"?\n",
     "print('Full DF Start station and End station are the same and less than 60 seconds: ')\n",
-    "print(df.loc[df['Start station'] == df['End station']]['Total duration (ms)'].apply(lambda x: x < 60000).sum())\n",
-    "\n"
+    "print(\n",
+    "    df.loc[df['Start station'] == df['End station']]['Total duration (ms)']\n",
+    "    .apply(lambda x: x < 60000)\n",
+    "    .sum()\n",
+    ")"
    ]
   },
   {
@@ -366,7 +375,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Create a simple scatter plot of the unique OR trip df.\n",
     "x = []\n",
     "y = []\n",
@@ -375,7 +383,7 @@
     "for i in range(1, 3000):\n",
     "    # Loop over the trip quantity, query how many counts there are in the unique OD set.\n",
     "    x.append(i)\n",
-    "    y_val = int(df_unique_od[\"count\"].value_counts().get(i, 0))\n",
+    "    y_val = int(df_unique_od['count'].value_counts().get(i, 0))\n",
     "    y.append(y_val)"
    ]
   },
@@ -401,10 +409,10 @@
     "    if y_right[idx] != 0:\n",
     "        outliers.append((x_val, y_right[idx]))\n",
     "\n",
-    "print(f\"outliers ({len(outliers)}): \", outliers)\n",
+    "print(f'outliers ({len(outliers)}): ', outliers)\n",
     "\n",
     "df_outliers = pd.DataFrame(\n",
-    "    outliers, columns=[\"Number of repetitions\", \"Quantity of trips\"]\n",
+    "    outliers, columns=['Number of repetitions', 'Quantity of trips']\n",
     ")\n",
     "\n",
     "print('Outliers df:')\n",
@@ -416,8 +424,8 @@
     "fig = px.scatter(\n",
     "    x=x_left,\n",
     "    y=y_left,\n",
-    "    title=\"Frequency of Repeat Trips\",\n",
-    "    labels={\"x\": \"Number of repeat trips\", \"y\": \"Quantity of trips\"},\n",
+    "    title='Frequency of Repeat Trips',\n",
+    "    labels={'x': 'Number of repeat trips', 'y': 'Quantity of trips'},\n",
     ")\n",
     "fig.show()"
    ]
@@ -429,8 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "Vis([\"Start station=Kennington Lane Rail Bridge, Vauxhall\", \"Bike number\"], df)\n",
+    "Vis(['Start station=Kennington Lane Rail Bridge, Vauxhall', 'Bike number'], df)\n",
     "\n",
     "# https://nominatim.openstreetmap.org/search?q=Glasgow&format=json&countrycodes=gb\n",
     "# https://nominatim.openstreetmap.org/search?q=Kennington%20Lane%20Rail%20Bridge,%20Vauxhall&format=json&countrycodes=gb\n",
